fixed a critical menu issue: the li collapse id is the category name of that item to have a match but when there a space in the category name the collapse will not work anymore => replace all the spaces so the menu works on every type of category name

--- a/fablab-webapp/web/assets/css/styling-template.css
+++ b/fablab-webapp/web/assets/css/styling-template.css
@@ -61,7 +61,7 @@ textarea  {
 
 /*show the correct things in the print preview of the qr code */
 @media screen {
-    #printSection {
+    #printContent {
         display: none;
     }
 }
@@ -70,10 +70,10 @@ textarea  {
     body * {
         visibility:hidden;
     }
-    #printSection, #printSection * {
+    #printContent, #printContent * {
         visibility:visible;
     }
-    #printSection {
+    #printContent {
         position:absolute;
         left:0;
         top:0;
